--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap');
+
+
 .signup-container {
   height: 100vh;
   background-image: url(/public/images/anemone.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  font-family: 'Montserrat', sans-serif;
 }
 
 #signup-col {
